--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-i18next": "^15.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
+    "react-tooltip": "^5.29.1",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
