--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.23.12",
     "i18next-browser-languagedetector": "^8.2.0",
     "react": "^19.1.0",
@@ -20,6 +21,7 @@
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.6.3",
     "react-tooltip": "^5.29.1",
+    "sweetalert2": "^11.22.2",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
